# Realtime-Adaptive-Database

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Assignment2_README.md  Dockerfile  README.md  assignment2.md  assignment3_README.md  asslast.md  docker-compose.yml  implementation_plan.md.resolved  load_test.js  package-lock.json  pyproject.toml  requirements.txt  run_pipeline.py  stream_from_api.py  test_a2_components.py  test_concurrency.py  test_concurrency_e2e.py  test_pipeline.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/prompts/: plan-final.prompt.md  plan-logicalDashboard.prompt.md  planConcurrency.prompt.md
.github/workflows/: ci.yml
assignment_wise_readme/: Assignment1_README.md  Assignment2_README.md
dashboard/: __init__.py  api_server.py
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
dashboard/static/: app.js  index.html  styles.css
docs/: README.md  api.md  architecture.md  assignment2_file_pipeline.md  developer-guide.md  quickstart.md
puppeteer_test/: package-lock.json
schemas/: assignment2_schema.template.json
scripts/: run_pipeline.py
src/: __init__.py  cli.py  config.py  ingest_and_classify.py  pipeline.py
src/a2/: __init__.py  contracts.py  crud_engine.py  (+7 more)
tests/: __init__.py  conftest.py  test_analyzer.py  test_buffer.py  test_classifier.py  test_classifier_array_routing.py  test_concurrency.py  test_concurrency_e2e.py  test_field_stats_arrays.py  test_ingest_and_classify.py  test_integration.py  test_normalization.py  test_record_router_array_sql.py  test_router.py
(+157 files in other folders)
